--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studybrew</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <div class="all">
+      <img class="logo" src="Images/logo.png" alt="logo" class="img">
+      <img class="fav" src="Images/favourite.png" alt="fav" class="img">
+      <img class="dk" src="Images/DK.png" alt="dk" class="img">
+      <img class="doodle" src="Images/doodle.png" alt="doodle" class="img">
+      <img class="tagline" src="Images/Tagline.png" alt="tagline" class="img">
+
+        <div class="wrapper">
+          <div class="box"></div>
+          <span class="Explore">Explore</span>
+        </div>
+
+      </div>
 </body>
 </html>
