--- a/roast.html
+++ b/roast.html
@@ -3,9 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Roast Coffee</title>
+    <link rel="stylesheet" href="css/roast.css">
 </head>
 <body>
-    
+    <div class="all"> <!--Header-->
+        <img class="logo" src="Images/logo.png" alt="logo" class="img">
+        <img class="fav" src="Images/favourite.png" alt="fav" class="img">
+        <img class="dk" src="Images/DK.png" alt="dk" class="img">
+
+          <div class="headline"> <!--Headline-->
+            <img class="backbutton" src="Images/back.png" alt="back" class="img">
+          </div>
+
+
+
+          <div class="box">
+            <span class="text">ROAST Coffee Studiestræde</span>
+            <img class="pic1" src="Images/roast1.png" alt="pic1" class="img">
+            <img class="previous" src="Images/previous.png" alt="previous" class="img">
+            <img class="next" src="Images/next.png" alt="next" class="img">
+
+            <span class="days">Mo<br>Tu<br>We<br>Th<br>Fr<br>Sa<br>Su</span>
+            <span class="time">7:30 - 18:00<br>7:30 - 18:00<br>7:30 - 18:00<br>7:30 - 18:00<br>7:30 - 18:00<br>10:00 - 18:00<br>10:00 - 17:00</span>
+
+
+        </div>
+
+        <div class="box2">
+            <div class="box-2">
+              <span class="address">Copenhagen, Studiestræde 16</span>
+              <span class="km">2 km </span>
+              <span class="map"> <a href="https://maps.app.goo.gl/LRHq9JTmcBjMbPmJA" target="_blank">Show on map</a></span>
+            </div>
+
+            <span class="busyheadline">Busy hours</span>
+            <img class="busyhours" src="Images/roastbusyhours.png" alt="busy hours" class="img">
+        </div>
+
+
+
+
+
+          <span class="serving">Serving</span>
+          <img class="servingimg" src="Images/roastserving.png" alt="serving" class="img">
+          <span class="services">Services</span>
+          <img class="servicesimg" src="Images/services.png" alt="services" class="img">
+
+
+
+
+
+          <div class="reviewsgroup">
+            <span class="reviewheadline">1 Reviews</span>
+            <img class="stars" src="Images/ratingbrown.png" alt="review" class="img">
+          </div>
+         
+          <div class="button">
+            <span class="buttontext">Write a review</span>
+          </div>
+
+
+          <div class="box3">
+            <div class="com1">
+              <span class="comname">Mette Clausen</span>
+              <img class="rating" src="Images/rating.png" alt="review" class="img">
+              <span class="comtext"> Always a big pleasure to stop by for a delightful cup. Recommended for coffee enthusiasts!</span>
+              <img class="D" src="Images/M.png" alt="review" class="img">
+            </div>
+          </div>
+
+
+
+        </div>
 </body>
 </html>
