--- a/collective.html
+++ b/collective.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Collective</title>
     <link rel="stylesheet" href="css/collective.css">
-    <script src="js/js.js"></script>
+    <script src="js/collective.js"></script>
 </head>
 <body>
     <div class="all"> <!--Header-->
-        <img class="logo" src="Images/logo.png" alt="logo" class="img">
-        <img class="fav" src="Images/favourite.png" alt="fav" class="img">
-        <img class="dk" src="Images/DK.png" alt="dk" class="img">
+      <a href="index.html"><img class="logo" src="Images/logo.png" alt="logo" class="img"></a>
+      <a href="favourite.html"><img class="fav" src="Images/favourite.png" alt="fav" class="img"></a>
+      <img class="dk" src="Images/DK.png" alt="dk" class="img">
 
-          <div class="headline"> <!--Headline-->
-            <img class="backbutton" src="Images/back.png" alt="back" class="img">
-          </div>
+      <a href="main.html"><img class="back" src="Images/back.png" alt="back" class="img"></a>
+      
 
 
 
@@ -67,10 +66,11 @@
             <span class="reviewheadline">2 Reviews</span>
             <img class="stars" src="Images/ratingbrown.png" alt="review" class="img">
           </div>
-         
+
+          <a href="review1.html">
           <div class="button">
             <span class="buttontext">Write a review</span>
-          </div>
+          </div></a>
 
 
           <div class="box3">
