--- a/favourite.html
+++ b/favourite.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <div class="all"> <!--Header-->
-        <img class="logo" src="Images/logo.png" alt="logo" class="img">
-        <img class="fav" src="Images/favourite.png" alt="fav" class="img">
+      <a href="index.html"><img class="logo" src="Images/logo.png" alt="logo" class="img"></a>
+      <a href="favourite.html"><img class="fav" src="Images/favourite.png" alt="fav" class="img"></a>
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
 
           <div class="headline"> <!--Headline-->
             <span class="text">Favourite list</span>
-            <img class="backbutton" src="Images/back.png" alt="back" class="img">
+            <a href="main.html"><img class="backbutton" src="Images/back.png" alt="back" class="img"></a>
           </div>
 
           <div class="boxs"> <!--all Cafes-->
 
-            <div class="box1"> <!--Coffee Collective Cafe box-->
+            <a href="collective.html">
+              <div class="box1"> <!--Coffee Collective Cafe box-->
               <img class="pic" src="Images/collective1.png" alt="col1" class="img">
               <span class="colltext1">Coffee Collective - <br>Godthåbsvej</span>
               <img class="like1" src="Images/like.png" alt="like" class="img">
@@ -27,7 +28,9 @@
               <span class="colltext3">Copenhagen, Godthabsvej 34b</span>
               <span class="colltext4">2 km </span>
             </div>
+          </a>
 
+          <a href="wildhorses.html">
             <div class="box2"> <!--Wild horses Cafe box-->
                 <img class="pic2" src="Images/horses1.png" alt="hor1" class="img">
                 <img class="like2" src="Images/like.png" alt="like" class="img">
@@ -44,6 +47,7 @@
               </div>
 
             </div>
+          </a>
           </div>
 
         </div>
