--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <div class="all">
-      <img class="logo" src="Images/logo.png" alt="logo" class="img">
-      <img class="fav" src="Images/favourite.png" alt="fav" class="img">
+      <a href="index.html"><img class="logo" src="Images/logo.png" alt="logo" class="img"></a>
+      <a href="favourite.html"><img class="fav" src="Images/favourite.png" alt="fav" class="img"></a>
       <img class="dk" src="Images/DK.png" alt="dk" class="img">
       <img class="doodle" src="Images/doodle.png" alt="doodle" class="img">
       <img class="tagline" src="Images/Tagline.png" alt="tagline" class="img">
 
-        <div class="wrapper">
-          <div class="box"></div>
+      <a href="main.html"> 
+      <div class="box">
           <span class="Explore">Explore</span>
         </div>
-
+      </a>  
       </div>
 </body>
 </html>
+
+
+
+
