--- a/review1.html
+++ b/review1.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="all">
-        <img class="logo" src="Images/logo.png" alt="logo" class="img">
-        <img class="fav" src="Images/favourite.png" alt="fav" class="img">
+      <a href="index.html"><img class="logo" src="Images/logo.png" alt="logo" class="img"></a>
+      <a href="favourite.html"><img class="fav" src="Images/favourite.png" alt="fav" class="img"></a>
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
 
         <div class="headline"> <!--Headline-->
             <span class="text">Write a review</span>
-            <img class="backbutton" src="Images/back.png" alt="back" class="img">
+            <a href="main.html"><img class="backbutton" src="Images/back.png" alt="back" class="img"></a>
           </div>
 
           <div class="guest"> 
@@ -27,9 +27,9 @@
             <span class="boxtext">Share your experience</span>
           </div>
 
-          <div class="button">
+          <a href="review2.html"><div class="button">
             <span class="buttontext">Submit</span>
-          </div>
+          </div></a>
     </div>
 </body>
 </html>
