--- a/review2.html
+++ b/review2.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/review2.css">
 </head>
 <body>
-    <div class="all">
+    
+  <a href="main.html"><div class="all">
         <img class="logo" src="Images/logo.png" alt="logo" class="img">
         <img class="fav" src="Images/favourite.png" alt="fav" class="img">
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
@@ -33,5 +34,6 @@
 
           <img class="done" src="Images/donereview.png" alt="done" class="img">
     </div>
+  </a>
 </body>
 </html>
