--- a/review1.html
+++ b/review1.html
@@ -12,21 +12,23 @@
       <a href="favourite.html"><img class="fav" src="Images/favourite.png" alt="fav" class="img"></a>
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
 
-        <div class="headline"> <!--Headline-->
+        <div class="headline"> <!--Headline and back button-->
             <span class="text">Write a review</span>
             <a href="main.html"><img class="backbutton" src="Images/back.png" alt="back" class="img"></a>
           </div>
 
-          <div class="guest"> 
+          <div class="guest"> <!--Guest info-->
             <img class="G" src="Images/G.png" alt="guest" class="img">
             <span class="guestext">Guest</span>
           </div>
           <img class="stars" src="Images/5stars.png" alt="back" class="img">
-
+          
+          <!--Box to write a review-->
           <div class="box">
             <span class="boxtext">Share your experience</span>
           </div>
-
+          
+          <!--Submit button-->
           <a href="review2.html"><div class="button">
             <span class="buttontext">Submit</span>
           </div></a>
