--- a/review2.html
+++ b/review2.html
@@ -13,11 +13,12 @@
         <img class="fav" src="Images/favourite.png" alt="fav" class="img">
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
 
-        <div class="headline"> <!--Headline-->
+        <div class="headline"> <!--Headline and back button-->
             <span class="text">Write a review</span>
             <img class="backbutton" src="Images/back.png" alt="back" class="img">
           </div>
-
+          
+          <!--First review page information with lower opacity-->
           <div class="guest"> 
             <img class="G" src="Images/G.png" alt="guest" class="img">
             <span class="guestext">Guest</span>
@@ -32,6 +33,7 @@
             <span class="buttontext">Submit</span>
           </div>
 
+          <!--Submitted review icon-->
           <img class="done" src="Images/donereview.png" alt="done" class="img">
     </div>
   </a>
