--- a/error.html
+++ b/error.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/error.css">
 </head>
 <body>
-    <div class="all"> <!--Header-->
+    <div class="all">
         <img class="logo" src="Images/logo.png" alt="logo" class="img">
         <img class="error" src="Images/error.png" alt="error" class="img">
     </div>
