--- a/front_phone.html
+++ b/front_phone.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div class="all">
+        <!--Header-->
         <img class="logo" src="Images/logo.png" alt="logo" class="img">
         <img class="fav" src="Images/favourite.png" alt="fav" class="img">
         <img class="dk" src="Images/DK.png" alt="dk" class="img">
         <img class="doodle" src="Images/doodle.png" alt="doodle" class="img">
         <img class="tagline" src="Images/Tagline.png" alt="tagline" class="img">
   
+        <!--Button to go main page-->
         <a href="main_phone.html"> 
         <div class="box">
             <span class="Explore">Explore</span>
